# m4txblog

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  bacon.toml  build.rs  compose.dev.yml  compose.yml  djlint.toml  entrypoint.sh  rustfmt.toml
.github/workflows/: docker.yml  prek.yml  rust.yml
config/: dev.toml  prod.toml.example
importer/: Untitled.ipynb
m4txblog-common/: Cargo.toml
m4txblog-common/src/: lib.rs  md_pages.rs
m4txblog-macros/: Cargo.toml  build.rs
m4txblog-macros/src/: lib.rs  md_pages.rs  static_files_dir.rs
m4txblog-macros/src/md_pages/: rendering.rs
nginx/: Dockerfile  nginx.conf
scripts/: generate-favicons.sh
scss/: custom.scss  main.scss  syntax-highlighting.scss
src/: comments.rs  consts.rs  feed.rs  main.rs  migrations.rs  posts.rs  template_util.rs
src/md-pages/: 2010-06-28-hello-world-2.md  2010-06-28-pl-hello-world-2.md  2010-06-29-pl-zapowiedz-programu-gbx-thumb-extractor.md  2010-06-30-pl-funkcje-matematyczne-w-c-czesc-i.md  2010-07-02-pl-funkcje-matematyczne-w-c-czesc-ii.md  2010-07-07-pl-premiera-programu-smsprice.md  2010-07-16-pl-premiera-programu-duplicate-lines-finder.md  2010-07-23-pl-aktualizacje.md  2010-08-03-pl-zmienne-i-stale-w-c.md  2010-08-07-pl-zmiany.md  2010-08-27-pl-alternatywne-nazwy-przegladarek.md  2010-08-30-pl-mbot.md  2010-09-07-pl-nigdy-wiecej-produktow-microsoftu.md  2010-09-14-pl-nigdy-wiecej-gadu-gadu.md  2010-09-15-pl-mbot-0-02-wydany.md  2010-10-05-pl-pierwsze-kroki-z-linuksem-instalacja.md  2010-10-06-pl-pierwsze-kroki-z-linuksem-dzien-drugi.md  2010-10-07-pl-pierwsze-kroki-z-linuksem-dzien-trzeci.md  2010-10-09-pl-pierwsze-kroki-z-linuksem-xfire-dziala.md  2010-10-10-pl-pierwsze-kroki-z-linuksem-sterowniki-gpu-zainstalowane.md  2010-10-16-pl-pierwsze-kroki-z-linuksem-znowu-o-instalacji-programow.md  2010-10-25-pl-o-google-slow-kilkanascie.md  2010-11-13-pl-co-microsoft-robi-z-ludzmi.md  2010-11-24-pl-zmiany-na-blogu-i-zapowiedz-mbota-0-03.md  2010-12-18-pl-kilka-slow-o-wszechobecnym-spamie.md  2011-01-08-pl-chromium-os-czy-warto.md  2011-01-20-pl-discoverer-czyli-magia-sandboksowych-gier.md  2011-02-04-pl-discoverer-postepy.md  2011-03-12-pl-5-najlepszych-aplikacji-linuksowych-ktorych-nie-znajdziesz-na-windowsie.md  2011-03-22-pl-m4txblog-2-0.md  2011-04-06-pl-discoverera-nie-bedzie-na-razie.md  2011-04-14-pl-swiatlo-wolumetryczne-w-blenderze.md  2011-04-14-pl-www-m4tx-pl.md  2011-05-01-pl-najlepszy-darmowy-hosting.md  2011-05-29-pl-ubuntu-11-04-pierwsze-wrazenia.md  2011-06-08-pl-quake-live-pierwsze-wrazenia.md  2011-06-18-pl-firefox-5-yyy-lol.md  2011-06-24-pl-directx-vs-opengl-kolejna-porazka-microsoftu.md  2011-06-28-pl-m4txblog-to-juz-rok-minal.md  2011-06-30-pl-nowy-projekt-miner.md  (+78 more)
src/migrations/: m_0001_initial.rs
static/js/: color-modes.js
static/static/images/: site.webmanifest
templates/: _base.html  _main_nav.html  _md_page_toc.html  _md_page_toc_item.html  _post_comments.html  _post_list.html  archive.html  error.html  index.html  md_page.html  post.html
