[package]
name = "m4txblog"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "m4txblog-common",
    "m4txblog-macros",
]
resolver = "2"

[workspace.dependencies]
chrono = "0.4"
comrak = "0.37"
cot = { version = "0.2", default-features = false }
grass = "0.13"
indexmap = "2.7"
lightningcss = "1.0.0-alpha.65"
m4txblog-common = { path = "m4txblog-common" }
m4txblog-macros = { path = "m4txblog-macros" }
proc-macro2 = "1"
quote = "1"
rinja = "0.3"
serde = "1"
serde_yml = "0.0.12"
syn = "2"
syntect = "5"

[features]
nightly = ["m4txblog-macros/nightly"]

[dependencies]
chrono.workspace = true
cot = { workspace = true, features = ["live-reload"] }
indexmap.workspace = true
m4txblog-common.workspace = true
m4txblog-macros.workspace = true
rinja.workspace = true

[build-dependencies]
grass.workspace = true
lightningcss.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # used by the values returned by the md_guide! macro
    "chrono",
]
