[package]
name = "m4txblog"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "m4txblog-common",
    "m4txblog-macros",
]
resolver = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[workspace.dependencies]
atom_syndication = "0.12"
chrono = "0.4"
comrak = "0.49"
cot = { version = "0.5", default-features = false }
grass = "0.13"
indexmap = "2.12"
lightningcss = "1.0.0-alpha.68"
m4txblog-common = { path = "m4txblog-common" }
m4txblog-macros = { path = "m4txblog-macros" }
proc-macro2 = "1"
quote = "1"
rustversion = "1"
serde = "1"
serde_yml = "0.0.12"
syn = "2"
syntect = { version = "5", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
nightly = ["m4txblog-macros/nightly"]

[dependencies]
async-trait = "0.1.88"
atom_syndication.workspace = true
chrono.workspace = true
cot = { workspace = true, features = ["sqlite", "live-reload"] }
indexmap.workspace = true
m4txblog-common.workspace = true
m4txblog-macros.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
grass.workspace = true
lightningcss.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # used by the values returned by the md_guide! macro
    "chrono",
]
