[package]
name = "m4txblog-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
comrak = "0.36"
m4txblog-common = { path = "../m4txblog-common" }
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde = "1.0"
serde_yml = "0.0.12"
syn = "2.0.98"
syntect = { version = "5", features = ["dump-load"] }

[build-dependencies]
syntect = { version = "5", features = ["dump-create"] }
