[package]
name = "m4txblog-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
comrak.workspace = true
m4txblog-common.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_yml.workspace = true
syn.workspace = true
syntect = { workspace = true, features = ["dump-load"] }

[build-dependencies]
syntect = { workspace = true, features = ["dump-create"] }
